# serializer version: 1
# name: test_issue_40
  list([
    'Jonat han',
    None,
    '',
    None,
    None,
    '',
    None,
    None,
    None,
    '',
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    '',
  ])
# ---
# name: test_long_text
  list([
    None,
    None,
    'Riksgäldskontoret',
    '',
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    '',
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    'Riksdagsordningen',
    None,
    '',
  ])
# ---
# name: test_short_text
  list([
    None,
    None,
    'Handelstidningens',
    'gårdagsnummer',
    None,
    None,
    '',
    'som',
    None,
    None,
    'Frölandsviken',
    '',
  ])
# ---
